--- a/templates/index.html
+++ b/templates/index.html
@@ -114,7 +114,7 @@
 							<div class="row">
 								<div class="col">
 									<div class="home_slider_content">
-										<div class="{% static 'home_title'%}"><h2>Let us take you away</h2></div>
+										<div class="home_title"><h2>Let us take you away</h2></div>
 									</div>
 								</div>
 							</div>
